# PhyExpAssistant

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  项目可行性探索.md
data/samples/: pendulum.csv  pendulum.json
docs/: architecture.md  demo_architecture.md  llm_plotting_scheme.md
src/phyexpassistant/: cli.py  docx_writer.py  experiments.py  llm_client.py  paths.py  plotting.py  settings.py  ui.py  workflow.py
src/phyexpassistant/prompts/: plot_plan.txt  template_ocr.txt  template_report.txt
src/phyexpassistant/resources/: experiments.json
src/phyexpassistant/resources/experiments/: exp_001.json  exp_002.json  exp_003.json  exp_custom_young_modulus_tension.json
