[project]
name = "phyexpassistant-demo"
version = "0.1.0"
description = "Demo CLI for physics experiment report generation with LLM-assisted OCR."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
phyexpassistant = "phyexpassistant.cli:main"

[project.optional-dependencies]
ui = ["PySide6>=6.6"]
