[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phyexpassistant"
version = "1.0.0"
description = "Physics experiment report generation with LLM-assisted OCR."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
phyexpassistant = "phyexpassistant.cli:main"

[project.optional-dependencies]
ui = ["PySide6>=6.6"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
phyexpassistant = ["assets/*", "resources/*.json", "resources/experiments/*.json", "prompts/*.txt"]
